@@ -144,8 +144,8 @@ def _make_j3c(mydf, cell, auxcell, kptij_lst, cderi_file):
     log = logger.Logger(mydf.stdout, mydf.verbose)
     max_memory = max(2000, mydf.max_memory-lib.current_memory()[0])
     fused_cell, fuse = fuse_auxcell(mydf, auxcell)
-    outcore.aux_e2(cell, fused_cell, cderi_file, 'int3c2e', aosym='s2',
-                   kptij_lst=kptij_lst, dataname='j3c', max_memory=max_memory)
+    outcore._aux_e2(cell, fused_cell, cderi_file, 'int3c2e', aosym='s2',
+                    kptij_lst=kptij_lst, dataname='j3c', max_memory=max_memory)
     t1 = log.timer_debug1('3c2e', *t1)
 
     nao = cell.nao_nr()
@@ -221,6 +221,7 @@ def _make_j3c(mydf, cell, auxcell, kptij_lst, cderi_file):
         feri['j2c/%d'%k] = fuse(fuse(j2c[k]).T).T
     j2c = coulG = None
 
+    nsegs = len(feri['j3c/0'])
     def make_kpt(uniq_kptji_id):  # kpt = kptj - kpti
         kpt = uniq_kpts[uniq_kptji_id]
         log.debug1('kpt = %s', kpt)
@@ -273,6 +274,8 @@ def _make_j3c(mydf, cell, auxcell, kptij_lst, cderi_file):
             aosym = 's1'
             nao_pair = nao**2
 
+        fswap = lib.H5TmpFile()
+
         mem_now = lib.current_memory()[0]
         log.debug2('memory = %s', mem_now)
         max_memory = max(2000, mydf.max_memory-mem_now)
@@ -300,7 +303,8 @@ def _make_j3c(mydf, cell, auxcell, kptij_lst, cderi_file):
             j3cR = []
             j3cI = []
             for k, idx in enumerate(adapted_ji_idx):
-                v = numpy.asarray(feri['j3c/%d'%idx][:,col0:col1])
+                v = numpy.vstack([feri['j3c/%d/%d'%(idx,i)][0,col0:col1].T
+                                  for i in range(nsegs)])
                 if is_zero(kpt) and cell.dimension == 3:
                     for i in numpy.where(vbar != 0)[0]:
                         v[i] -= vbar[i] * ovlp[k][col0:col1]
@@ -359,11 +363,12 @@ def _make_j3c(mydf, cell, auxcell, kptij_lst, cderi_file):
                     v = scipy.linalg.solve_triangular(j2c, v, lower=True, overwrite_b=True)
                 else:
                     v = lib.dot(j2c, v)
-                feri['j3c/%d'%ji][:naux0,col0:col1] = v
+                fswap['%d/%d'%(k,istep)] = v
 
         del(feri['j2c/%d'%uniq_kptji_id])
+        nsteps = len(shranges)
         for k, ji in enumerate(adapted_ji_idx):
-            v = feri['j3c/%d'%ji][:naux0]
+            v = numpy.hstack([fswap['%d/%d'%(k,i)] for i in range(nsteps)])
             del(feri['j3c/%d'%ji])
             feri['j3c/%d'%ji] = v
 
